[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-chat-to-md"
version = "0.2.0"
description = "Convert Claude Code chat sessions to Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "markdown", "chat", "export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/civisrom/claude-chat-to-md"
Repository = "https://github.com/civisrom/claude-chat-to-md"
Issues = "https://github.com/civisrom/claude-chat-to-md/issues"

[project.scripts]
claude-chat-to-md = "claude_chat_to_md:main"

[tool.setuptools]
py-modules = ["claude_chat_to_md"]
